--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1 class="ribbon"><strong class="ribbon-content">origin dev</strong></h1>
-<h2 class="ribbon"><strong class="ribbon-content">главный состав</strong></h2>
+<h2 class="ribbon"><strong class="ribbon-content">Главный состав</strong></h2>
 
 <div class="container">
     <div class="row">
@@ -49,7 +49,7 @@
     </div>
 </div>
 
-<h2 class="ribbon"><strong class="ribbon-content">juniors</strong></h2>
+<h2 class="ribbon"><strong class="ribbon-content">Juniors</strong></h2>
 
 <div class="container">
     <div class="row">
