--- a/hack_bgl.html
+++ b/hack_bgl.html
@@ -5,27 +5,40 @@
     <meta charset="utf-8">
     <title>origin dev</title>
     <link rel="stylesheet" href="hackathons.css">
-    <link href="/css/surface_styles.css" rel="stylesheet">
 </head>
 <body>
 
 <h1>Crypto Wallet Kickstart (powered by BGL)</h1>
 
 <div class="container">
-    <div class="row">
-        <div class="col-md-12" style="align-items:flex-start">
-            <img class="team_photo" src="images/screenshots/wallet.png" alt=""/>
-        </div>
-        <div class="col-md-12" style="flex-direction: column">
-            <p>Задача: разработать криптовалютый кошелек для монеты BGL</p>
+    <div class="col-md-6" style="align-items:flex-start">
+        <img class="team_photo" src="images/screenshots/wallet.png" alt=""/>
+    </div>
+    <div class="col-md-6" style="align-items:flex-start;margin-left: 25px">
+        <p>Задача: разработать криптовалютый кошелек для монеты BGL</p>
+        <div class="row">
             <div class="container">
-                    <button class="mdc-button mdc-button--raised">
-                        <span class="mdc-button__label">Github репо</span>
+                <a target="_blank" rel="noopener noreferrer"
+                   href="https://github.com/semyon-dev/bgl-wallet-backend">
+                    <button class="mdc-button mdc-button--raised button custom-contained-button">
+                        <span class="mdc-button__label">backend github</span>
                     </button>
+                </a>
                 <p></p>
-                    <button class="mdc-button mdc-button--raised" href="https://www.behance.net/gallery/110826849/Bitgesell-Cryptowallet">
-                        <span class="mdc-button__label">design</span>
+                <a target="_blank" rel="noopener noreferrer"
+                   href="https://github.com/GranPecador/bgl-wallet-android">
+                    <button class="mdc-button mdc-button--raised button custom-contained-button">
+                        <span class="mdc-button__label">android app github</span>
                     </button>
+                </a>
+                <p></p>
+                <a target="_blank" rel="noopener noreferrer"
+                   href="https://www.behance.net/gallery/110826849/Bitgesell-Cryptowallet">
+                    <button class="mdc-button mdc-button--raised button custom-contained-button">
+                        <span class="mdc-button__label">design behance</span>
+                    </button>
+                </a>
+                <p></p>
             </div>
         </div>
     </div>
