--- a/hack_un.html
+++ b/hack_un.html
@@ -10,7 +10,7 @@
 
 <h1>hackuniversity 2020</h1>
 
-<img class="team_photo" src="images/team/photo_team.jpg">
+<img class="team_photo" src="images/screenshots/hu2.png">
 
 </body>
 </html>
