--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <h2 class="ribbon"><strong class="ribbon-content">Главный состав</strong></h2>
 
 <div class="container">
-    <div class="row">
+    <div class="row divS">
         <div class="col align-self-start">
             <div class="container">
                 <img class="image" style="horiz-align: center;" src="images/semyon.jpg" height="320" alt="">
