--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div class="col align-self-start">
             <img class="image" style="horiz-align: center;" src="images/zeka.jpg" height="250" alt="">
             <p class="text-member">Евгений Князев</p>
-            <p class="text-member">frontend & ML</p>
+            <p class="text-member">frontend & machine learning</p>
         </div>
         <div class="col align-self-start">
             <img class="image" style="horiz-align: center;" src="images/kesha.jpg" height="250" alt="">
@@ -67,6 +67,16 @@
             <img class="image" style="horiz-align: center;" src="images/andrey.jpg" height="250" alt="">
             <p class="text-member">Андрей Козлов</p>
             <p class="text-member">backend developer</p>
+        </div>
+        <div class="col align-self-start">
+            <img class="image" style="horiz-align: center;" src="images/unknown.png" height="250" alt="">
+            <p class="text-member">Иван Попов</p>
+            <p class="text-member">python & machine learning</p>
+        </div>
+        <div class="col align-self-start">
+            <img class="image" style="horiz-align: center;" src="images/unknown.png" height="250" alt="">
+            <p class="text-member">Андрей Небогатиков</p>
+            <p class="text-member">flutter developer</p>
         </div>
     </div>
 </div>
