new photos and hacks

--- a/hack_bgl.html
+++ b/hack_bgl.html
@@ -10,14 +10,14 @@
 
 <h1>Crypto Wallet Kickstart (powered by BGL)</h1>
 
-<div class="container">
-    <div class="col-md-6" style="align-items:flex-start">
+<div class="container div-center">
+    <div class="col-md-6 div-center" style="align-items:flex-start">
         <img class="team_photo" src="images/screenshots/wallet.png" alt=""/>
     </div>
-    <div class="col-md-6" style="align-items:flex-start;margin-left: 25px">
+    <div class="col-md-6 div-center" style="align-items:flex-start;margin-left: 25px">
         <p>Задача: разработать криптовалютый кошелек для монеты BGL</p>
-        <div class="row">
-            <div class="container">
+        <div class="row div-center">
+            <div class="container div-center">
                 <a target="_blank" rel="noopener noreferrer"
                    href="https://github.com/semyon-dev/bgl-wallet-backend">
                     <button class="mdc-button mdc-button--raised button custom-contained-button">
