--- a/index.html
+++ b/index.html
@@ -69,42 +69,98 @@
             <p class="text-member">backend developer</p>
         </div>
         <div class="col align-self-start">
-            <img class="image" style="horiz-align: center;" src="images/unknown.png" height="250" alt="">
+            <img class="image" style="horiz-align: center;" src="images/team/vanya-popov.jpeg" height="250" alt="">
             <p class="text-member">Иван Попов</p>
             <p class="text-member">python & machine learning</p>
         </div>
         <div class="col align-self-start">
-            <img class="image" style="horiz-align: center;" src="images/unknown.png" height="250" alt="">
+            <img class="image" style="horiz-align: center;" src="images/team/andrey-n.jpeg" height="250" alt="">
             <p class="text-member">Андрей Небогатиков</p>
             <p class="text-member">flutter developer</p>
+        </div>
+        <div class="col align-self-start">
+            <img class="image" style="horiz-align: center;" src="images/team/dima-ch.jpg" height="250" alt="">
+            <p class="text-member">Дмитрий Черваков</p>
+            <p class="text-member">designer</p>
         </div>
     </div>
 </div>
 
-<h1 class="ribbon"><strong class="ribbon-content">Достижения</strong></h1>
-
-<div class="container">
-    <div class="row">
-        <div class="col align-self-start">
-            <img class="image_small" style="horiz-align: center;" src="images/hack2.jpg" height="55" alt="">
+<h1 class="ribbon"><strong class="ribbon-content">Хакатоны</strong></h1>
+<div class="row">
+    <div class="col align-self-start">
+        <div class="mdc-card my-card" onclick="window.location='hack_bgl.html'">
+            <div class="mdc-card__content">
+                <img class="image_small" src="images/bgl_logo.png" height="55" alt="">
+                <p class="text-member">BGL Kickstart - crypto wallet</p>
+                <p class="text-member">1 место</p>
+            </div>
+            <div class="mdc-card__actions">
+                <button class="mdc-button mdc-card__action mdc-card__action--button">
+                    <div class="mdc-button__ripple"></div>
+                    <span class="mdc-button__label my-mdc-button__label">Подробнее</span>
+                </button>
+            </div>
         </div>
-        <div class="col align-self-start" style="cursor: pointer;" onclick="window.location='hack2.html';">
-            <p class="text-member">Хакатон труда 2</p>
-            <p class="text-member">1 место - 125 000 ₽</p>
+    </div>
+    <div class="col align-self-start">
+        <div class="mdc-card my-card" onclick="window.location='hack_bgl.html'">
+            <div class="mdc-card__content">
+                <img class="image_small" src="images/dev-hack.jpg" height="55" alt="">
+                <p class="text-member">dev hack</p>
+                <p class="text-member">1 место</p>
+            </div>
+            <div class="mdc-card__actions">
+                <button class="mdc-button mdc-card__action mdc-card__action--button">
+                    <div class="mdc-button__ripple"></div>
+                    <span class="mdc-button__label my-mdc-button__label">Подробнее</span>
+                </button>
+            </div>
         </div>
-        <div class="col align-self-start">
-            <img class="image_small" style="horiz-align: center;" src="images/bgl_logo.png" height="55" alt="">
+    </div>
+    <div class="col align-self-start">
+        <div class="mdc-card my-card" onclick="window.location='i-moscow.html'">
+            <div class="mdc-card__content">
+                <img class="image_small" src="images/msc.jpg" height="55" alt="">
+                <p class="text-member">Moscow City Hack</p>
+                <p class="text-member">1-3 место</p>
+            </div>
+            <div class="mdc-card__actions">
+                <button class="mdc-button mdc-card__action mdc-card__action--button">
+                    <div class="mdc-button__ripple"></div>
+                    <span class="mdc-button__label my-mdc-button__label">Подробнее</span>
+                </button>
+            </div>
         </div>
-        <div class="col align-self-start" style="cursor: pointer;" onclick="window.location='hack_bgl.html';">
-            <p class="text-member">BGL Kickstart - crypto wallet</p>
-            <p class="text-member">1 место - 10 000 $</p>
+    </div>
+    <div class="col align-self-start">
+        <div class="mdc-card my-card" onclick="window.location='hack2.html'">
+            <div class="mdc-card__content">
+                <img class="image_small" src="images/hack2.jpg" height="55" alt="">
+                <p class="text-member">Хакатон труда 2</p>
+                <p class="text-member">1 место</p>
+            </div>
+            <div class="mdc-card__actions">
+                <button class="mdc-button mdc-card__action mdc-card__action--button">
+                    <div class="mdc-button__ripple"></div>
+                    <span class="mdc-button__label my-mdc-button__label">Подробнее</span>
+                </button>
+            </div>
         </div>
-        <div class="col align-self-start">
-            <img class="image_small" style="horiz-align: center;" src="images/hu.png" height="55" alt="">
-        </div>
-        <div class="col align-self-start" style="cursor: pointer;" onclick="window.location='hack_un.html';">
-            <p class="text-member">hack university</p>
-            <p class="text-member">2 место</p>
+    </div>
+    <div class="col align-self-start">
+        <div class="mdc-card my-card" onclick="window.location='hack_un.html'">
+            <div class="mdc-card__content">
+                <img class="image_small" src="images/hu.png" height="55" alt="">
+                <p class="text-member">hack university</p>
+                <p class="text-member">2 место</p>
+            </div>
+            <div class="mdc-card__actions">
+                <button class="mdc-button mdc-card__action mdc-card__action--button">
+                    <div class="mdc-button__ripple"></div>
+                    <span class="mdc-button__label my-mdc-button__label">Подробнее</span>
+                </button>
+            </div>
         </div>
     </div>
 </div>
@@ -128,6 +184,7 @@
         </h5>
     </div>
 </footer>
+
 
 </body>
 </html>
