--- a/i-moscow.html
+++ b/i-moscow.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<button id="fileRequest" class="dwnld-cta">Скачать APK</button>
+<button id="fileRequest" class="dwnld-cta button_apk">Скачать APK</button>
 
 
 <script>
