--- a/i-moscow.html
+++ b/i-moscow.html
@@ -3,12 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="i.css">
 </head>
 <body>
 
-<button id="fileRequest" class="dwnld-cta button_apk">Скачать APK</button>
 
+<!--<div class="embed-responsive embed-responsive-16by9">-->
+<!--    <iframe class="embed-responsive-item" src="https://youtu.be/FZkdVk4ZqO8" allowfullscreen></iframe>-->
+<!--</div>-->
+
+<h2 class="h2">Демо видео</h2>
+
+<iframe class="center" width="324" height="720" src="https://www.youtube.com/embed/FZkdVk4ZqO8"
+        title="YouTube video player"
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen></iframe>
+
+<div class="column">
+    <button id="fileRequest" class="dwnld-cta button_apk">Скачать APK</button>
+</div>
 
 <script>
     const download = document.getElementById("fileRequest");
