i.moscow bootstrap added

--- a/i-moscow.html
+++ b/i-moscow.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="i.css">
+
+    <!--Bootstrap CSS-->
+    <link rel="stylesheet"
+          href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    />
+
+    <!-- Bootstrap Js -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+
 </head>
 <body>
 
@@ -11,28 +22,33 @@
 <!--<div class="embed-responsive embed-responsive-16by9">-->
 <!--    <iframe class="embed-responsive-item" src="https://youtu.be/FZkdVk4ZqO8" allowfullscreen></iframe>-->
 <!--</div>-->
+<div class="container">
+    <div class="col-lg-12 center" style="padding-top:40px">
+        <h2 class="h2" style="margin-bottom: 20px">Демо видео</h2>
 
-<h2 class="h2">Демо видео</h2>
+        <iframe class="center" width="324" height="720" src="https://www.youtube.com/embed/FZkdVk4ZqO8"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
 
-<iframe class="center" width="324" height="720" src="https://www.youtube.com/embed/FZkdVk4ZqO8"
-        title="YouTube video player"
-        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen></iframe>
+        <div class="column">
+            <button id="fileRequest" class="dwnld-cta button_apk">Скачать APK</button>
+        </div>
 
-<div class="column">
-    <button id="fileRequest" class="dwnld-cta button_apk">Скачать APK</button>
+        <script>
+            const download = document.getElementById("fileRequest");
+
+            download.addEventListener('click', request);
+
+            function request() {
+                window.location = 'app.apk';
+            }
+        </script>
+    </div>
+
+
 </div>
-
-<script>
-    const download = document.getElementById("fileRequest");
-
-    download.addEventListener('click', request);
-
-    function request() {
-        window.location = 'app.apk';
-    }
-</script>
-
 
 </body>
 </html>
