--- a/i-moscow.html
+++ b/i-moscow.html
@@ -26,11 +26,16 @@
     <div class="col-lg-12 center" style="padding-top:40px">
         <h2 class="h2" style="margin-bottom: 20px">Демо видео</h2>
 
-        <iframe class="center" width="324" height="720" src="https://www.youtube.com/embed/FZkdVk4ZqO8"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
+<!--        <iframe class="center" width="324" height="720" src="https://www.youtube.com/embed/FZkdVk4ZqO8"-->
+<!--                title="YouTube video player"-->
+<!--                frameborder="0"-->
+<!--                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"-->
+<!--                allowfullscreen></iframe>-->
+
+        <!-- 16:9 aspect ratio -->
+        <div class="embed-responsive embed-responsive-16by9">
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/FZkdVk4ZqO8"></iframe>
+        </div>
 
         <div class="column">
             <button id="fileRequest" class="dwnld-cta button_apk">Скачать APK</button>
