--- a/i-moscow.html
+++ b/i-moscow.html
@@ -22,34 +22,34 @@
 <!--<div class="embed-responsive embed-responsive-16by9">-->
 <!--    <iframe class="embed-responsive-item" src="https://youtu.be/FZkdVk4ZqO8" allowfullscreen></iframe>-->
 <!--</div>-->
-<div class="container">
-    <div class="col-lg-12 center" style="padding-top:40px">
-        <h2 class="h2" style="margin-bottom: 20px">Демо видео</h2>
+<div class="container justify-content-center">
+    <div class="row center" style="padding-top:40px;justify-content: center">
+        <div class="span12">
+            <h2 class="h2" style="margin-bottom: 20px">Демо видео</h2>
 
-<!--        <iframe class="center" width="324" height="720" src="https://www.youtube.com/embed/FZkdVk4ZqO8"-->
-<!--                title="YouTube video player"-->
-<!--                frameborder="0"-->
-<!--                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"-->
-<!--                allowfullscreen></iframe>-->
+            <iframe class="center" width="324" height="720" src="https://www.youtube.com/embed/FZkdVk4ZqO8"
+                    title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
 
-        <!-- 16:9 aspect ratio -->
-        <div class="embed-responsive embed-responsive-16by9">
-            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/FZkdVk4ZqO8"></iframe>
+
+
+            <div class="column">
+                <button id="fileRequest" class="dwnld-cta button_apk">Скачать APK</button>
+            </div>
+
+            <script>
+                const download = document.getElementById("fileRequest");
+
+                download.addEventListener('click', request);
+
+                function request() {
+                    window.location = 'app.apk';
+                }
+            </script>
         </div>
 
-        <div class="column">
-            <button id="fileRequest" class="dwnld-cta button_apk">Скачать APK</button>
-        </div>
-
-        <script>
-            const download = document.getElementById("fileRequest");
-
-            download.addEventListener('click', request);
-
-            function request() {
-                window.location = 'app.apk';
-            }
-        </script>
     </div>
 
 
