--- a/i-moscow.html
+++ b/i-moscow.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Приложение i.moscow</title>
     <link rel="stylesheet" href="i.css">
 
     <!--Bootstrap CSS-->
