--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div class="mdc-card my-card" onclick="window.location='hack_bgl.html'">
             <div class="mdc-card__content">
                 <img class="image_small" src="images/bgl_logo.png" height="55" alt="">
-                <p class="text-member">BGL Kickstart - crypto wallet</p>
+                <p class="text-member">Cryptowallet Kickstart (powered by BGL)</p>
                 <p class="text-member">1 место</p>
             </div>
             <div class="mdc-card__actions">
@@ -123,7 +123,7 @@
             <div class="mdc-card__content">
                 <img class="image_small" src="images/msc.jpg" height="55" alt="">
                 <p class="text-member">Moscow City Hack</p>
-                <p class="text-member">1-3 место</p>
+                <p class="text-member">1 место</p>
             </div>
             <div class="mdc-card__actions">
                 <button class="mdc-button mdc-card__action mdc-card__action--button">
