--- a/hack2.html
+++ b/hack2.html
@@ -4,15 +4,34 @@
     <meta charset="UTF-8">
     <meta charset="utf-8">
     <title>origin dev</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="hackathons.css">
+    <!--Bootstrap CSS-->
+    <link rel="stylesheet"
+          href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    />
+
+    <!-- Bootstrap Js -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 </head>
 <body>
 
 <h1>Хакатон труда 2</h1>
 
-<p>1 место - 175 000 ₽</p>
+<p>1 место - 125 000 ₽</p>
 
-<img class="team_photo" src="images/team/photo_team.jpg">
+<p>Задача</p>
+
+<div class="container div-center">
+    <div class="col div-center" >
+        <img style="alignment: center" src="images/screenshots/hack2_presa.png" width="800px">
+
+        <img class="team_photo" width="1200px" src="images/team/photo_team.jpg">
+    </div>
+</div>
+
+
 
 </body>
 </html>
