--- a/hack_un.html
+++ b/hack_un.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta charset="utf-8">
     <title>origin dev</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="hackathons.css">
 </head>
 <body>
 
 <h1>hackuniversity 2020</h1>
+
+<p>2 место</p>
+
+<p>Сбор, анализ и визуализацию данных высокотехнологических процессов. Решение работает в режиме реального времени</p>
 
 <img class="team_photo" src="images/screenshots/hu2.png">
 
