--- a/i-moscow.html
+++ b/i-moscow.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>Приложение i.moscow</title>
@@ -19,9 +19,6 @@
 <body>
 
 
-<!--<div class="embed-responsive embed-responsive-16by9">-->
-<!--    <iframe class="embed-responsive-item" src="https://youtu.be/FZkdVk4ZqO8" allowfullscreen></iframe>-->
-<!--</div>-->
 <div class="container justify-content-center">
     <div class="row center" style="padding-top:40px;justify-content: center">
         <div class="span12">
@@ -32,7 +29,6 @@
                     frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
-
 
 
             <div class="column">
