--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <div class="mdc-card my-card" onclick="window.location='hack_bgl.html'">
             <div class="mdc-card__content">
                 <img class="image_small" src="images/bgl_logo.png" height="55" alt="">
-                <p class="text-member">Cryptowallet Kickstart (powered by BGL)</p>
+                <p class="text-member">Cryptowallet Kickstart by BGL</p>
                 <p class="text-member">1 место</p>
             </div>
             <div class="mdc-card__actions">
@@ -104,7 +104,7 @@
         </div>
     </div>
     <div class="col align-self-start">
-        <div class="mdc-card my-card" onclick="window.location='hack_bgl.html'">
+        <div class="mdc-card my-card" onclick="window.location='hack_dev.html'">
             <div class="mdc-card__content">
                 <img class="image_small" src="images/dev-hack.jpg" height="55" alt="">
                 <p class="text-member">dev hack</p>
