--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="row divS">
         <div class="col align-self-start">
             <div class="container">
-                <img class="image" style="horiz-align: center;" src="images/semyon.jpg" height="320" alt="">
+                <img class="image" style="horiz-align: center;" src="images/team/semyon.jpg" height="320" alt="">
                 <img class="img_tg" style="horiz-align: center;" src="images/tg.png" height="75" alt="" rel="#"
                      onclick="window.open('https://t.me/semyon_dev')">
             </div>
