--- a/index.html
+++ b/index.html
@@ -39,12 +39,21 @@
         </div>
         <div class="col align-self-start">
             <div class="container">
-                <img class="image" style="horiz-align: center;" src="images/lena.png" height="320" alt="">
+                <img class="image" style="horiz-align: center;" src="images/team/lena.jpg" height="320" alt="">
                 <img class="img_tg" style="horiz-align: center;" src="images/tg.png" height="75" alt="" rel="#"
                      onclick="window.open('https://t.me/lexysexy')">
             </div>
             <p class="text-member">Елена Верешкова</p>
             <p class="text-member">android developer</p>
+        </div>
+        <div class="col align-self-start">
+            <div class="container">
+                <img class="image" style="horiz-align: center;" src="images/team/andrey-n.jpeg" height="320" alt="">
+                <img class="img_tg" style="horiz-align: center;" src="images/tg.png" height="75" alt="" rel="#"
+                     onclick="window.open('https://t.me/andronax')">
+            </div>
+            <p class="text-member">Андрей Небогатиков</p>
+            <p class="text-member">flutter developer</p>
         </div>
     </div>
 </div>
@@ -73,11 +82,7 @@
             <p class="text-member">Иван Попов</p>
             <p class="text-member">python & machine learning</p>
         </div>
-        <div class="col align-self-start">
-            <img class="image" style="horiz-align: center;" src="images/team/andrey-n.jpeg" height="250" alt="">
-            <p class="text-member">Андрей Небогатиков</p>
-            <p class="text-member">flutter developer</p>
-        </div>
+
         <div class="col align-self-start">
             <img class="image" style="horiz-align: center;" src="images/team/dima-ch.jpg" height="250" alt="">
             <p class="text-member">Дмитрий Черваков</p>
