Added hero screen and header (without adaptive)

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html lang="ru">
 
 <head>
   <meta charset="utf-8">
@@ -31,7 +31,70 @@
 <body>
 
   <!-------------------------- Content -------------------------->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <header class="header">
+    <div class="header__content">
+      <a class="header__logo-link" href="#hero"><img class="header__logo" src="img/header__logo.svg" alt="logo"></a>
+      <ul class="header__list">
+        <li class="header__list-item">
+          <a class="header__link" href="#hero">Главная</a>
+        </li>
+        <li class="header__list-item">
+          <a class="header__link" href="#projects">Проекты</a>
+        </li>
+        <li class="header__list-item">
+          <a class="header__link" href="#achivments">Достижения</a>
+        </li>
+        <li class="header__list-item">
+          <a class="header__link" href="#contacts">Контакты</a>
+        </li>
+      </ul>
+    </div>
+  </header>
+
+
+  <main>
+    <div class="hero" id="hero">
+      <div class="hero__image"></div>
+      <div class="hero__content">
+        <div class="hero__content-wrapper">
+          <img class="hero__logo" src="/img/hero__logo.svg" alt="Our logo" class="hero__logo">
+          <p class="hero__paragraph">Команда разработки IT&#8209;продуктов и решения Ваших бизнес&#8209;задач. Создаём новое с 2020 года.</p>
+          <a class="hero__button button" href="#contacts">Связаться</a>
+        </div>
+      </div>
+    </div>
+    <div class="hero" id="projects">
+      <div class="hero__image"></div>
+      <div class="hero__content">
+        <div class="hero__content-wrapper">
+          <img class="hero__logo" src="/img/hero__logo.svg" alt="Our logo" class="hero__logo">
+          <p class="hero__paragraph">Команда разработки IT&#8209;продуктов и решения Ваших бизнес&#8209;задач. Создаём новое с 2020 года.</p>
+          <a class="hero__button button" href="#contacts">Связаться</a>
+        </div>
+      </div>
+    </div>
+    <div class="hero" id="achivments">
+      <div class="hero__image"></div>
+      <div class="hero__content">
+        <div class="hero__content-wrapper">
+          <img class="hero__logo" src="/img/hero__logo.svg" alt="Our logo" class="hero__logo">
+          <p class="hero__paragraph">Команда разработки IT&#8209;продуктов и решения Ваших бизнес&#8209;задач. Создаём новое с 2020 года.</p>
+          <a class="hero__button button" href="#contacts">Связаться</a>
+        </div>
+      </div>
+    </div>
+    <div class="hero" id="contacts">
+      <div class="hero__image"></div>
+      <div class="hero__content">
+        <div class="hero__content-wrapper">
+          <img class="hero__logo" src="/img/hero__logo.svg" alt="Our logo" class="hero__logo">
+          <p class="hero__paragraph">Команда разработки IT&#8209;продуктов и решения Ваших бизнес&#8209;задач. Создаём новое с 2020 года.</p>
+          <a class="hero__button button" href="#contacts">Связаться</a>
+        </div>
+      </div>
+    </div>
+
+  </main>
 
   <!-------------------------- Scripts -------------------------->
   <script src="js/main.js"></script>
