--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="hero__image"></div>
       <div class="hero__content">
         <div class="hero__content-wrapper">
-          <img class="hero__logo" src="/img/hero__logo.svg" alt="Our logo" class="hero__logo">
+          <img class="hero__logo" src="img/hero__logo.svg" alt="Our logo" class="hero__logo">
           <p class="hero__paragraph">Команда разработки IT&#8209;продуктов и решения Ваших бизнес&#8209;задач. Создаём новое с 2020 года.</p>
           <a class="hero__button button" href="#contacts">Связаться</a>
         </div>
@@ -67,7 +67,7 @@
       <div class="hero__image"></div>
       <div class="hero__content">
         <div class="hero__content-wrapper">
-          <img class="hero__logo" src="/img/hero__logo.svg" alt="Our logo" class="hero__logo">
+          <img class="hero__logo" src="img/hero__logo.svg" alt="Our logo" class="hero__logo">
           <p class="hero__paragraph">Команда разработки IT&#8209;продуктов и решения Ваших бизнес&#8209;задач. Создаём новое с 2020 года.</p>
           <a class="hero__button button" href="#contacts">Связаться</a>
         </div>
@@ -77,7 +77,7 @@
       <div class="hero__image"></div>
       <div class="hero__content">
         <div class="hero__content-wrapper">
-          <img class="hero__logo" src="/img/hero__logo.svg" alt="Our logo" class="hero__logo">
+          <img class="hero__logo" src="img/hero__logo.svg" alt="Our logo" class="hero__logo">
           <p class="hero__paragraph">Команда разработки IT&#8209;продуктов и решения Ваших бизнес&#8209;задач. Создаём новое с 2020 года.</p>
           <a class="hero__button button" href="#contacts">Связаться</a>
         </div>
@@ -87,7 +87,7 @@
       <div class="hero__image"></div>
       <div class="hero__content">
         <div class="hero__content-wrapper">
-          <img class="hero__logo" src="/img/hero__logo.svg" alt="Our logo" class="hero__logo">
+          <img class="hero__logo" src="img/hero__logo.svg" alt="Our logo" class="hero__logo">
           <p class="hero__paragraph">Команда разработки IT&#8209;продуктов и решения Ваших бизнес&#8209;задач. Создаём новое с 2020 года.</p>
           <a class="hero__button button" href="#contacts">Связаться</a>
         </div>
