Favicon fix part 2

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#2998ff">
   <meta name="msapplication-TileColor" content="#2998ff">
   <meta name="theme-color" content="#ffffff">
-  <link rel="icon" href="/favicon.ico">
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico?">
   <!-- Place favicon.ico in the root directory -->
 
   <!-------------------------- Styles -------------------------->
@@ -34,7 +34,7 @@
   <!-------------------------- Content -------------------------->
   <header class="header">
     <div class="header__content">
-      <a class="header__logo-link" href="#hero"><img class="header__logo" src="/img/header__logo.svg" alt="logo"></a>
+      <a class="header__logo-link" href="#hero"><img class="header__logo" src="./img/header__logo.svg" alt="logo"></a>
       <ul class="header__list">
         <li class="header__list-item">
           <a class="header__link" href="#hero">Главная</a>
@@ -58,7 +58,7 @@
       <div class="hero__image"></div>
       <div class="hero__content">
         <div class="hero__content-wrapper">
-          <img class="hero__logo" src="/img/hero__logo.svg" alt="Our logo" class="hero__logo">
+          <img class="hero__logo" src="./img/hero__logo.svg" alt="Our logo" class="hero__logo">
           <p class="hero__paragraph">Команда разработки IT&#8209;продуктов и решения Ваших бизнес&#8209;задач. Создаём новое с 2020 года.</p>
           <a class="hero__button button" href="#contacts">Связаться</a>
         </div>
@@ -68,7 +68,7 @@
       <div class="hero__image"></div>
       <div class="hero__content">
         <div class="hero__content-wrapper">
-          <img class="hero__logo" src="/img/hero__logo.svg" alt="Our logo" class="hero__logo">
+          <img class="hero__logo" src="./img/hero__logo.svg" alt="Our logo" class="hero__logo">
           <p class="hero__paragraph">Команда разработки IT&#8209;продуктов и решения Ваших бизнес&#8209;задач. Создаём новое с 2020 года.</p>
           <a class="hero__button button" href="#contacts">Связаться</a>
         </div>
@@ -78,7 +78,7 @@
       <div class="hero__image"></div>
       <div class="hero__content">
         <div class="hero__content-wrapper">
-          <img class="hero__logo" src="/img/hero__logo.svg" alt="Our logo" class="hero__logo">
+          <img class="hero__logo" src="./img/hero__logo.svg" alt="Our logo" class="hero__logo">
           <p class="hero__paragraph">Команда разработки IT&#8209;продуктов и решения Ваших бизнес&#8209;задач. Создаём новое с 2020 года.</p>
           <a class="hero__button button" href="#contacts">Связаться</a>
         </div>
@@ -88,7 +88,7 @@
       <div class="hero__image"></div>
       <div class="hero__content">
         <div class="hero__content-wrapper">
-          <img class="hero__logo" src="/img/hero__logo.svg" alt="Our logo" class="hero__logo">
+          <img class="hero__logo" src="./img/hero__logo.svg" alt="Our logo" class="hero__logo">
           <p class="hero__paragraph">Команда разработки IT&#8209;продуктов и решения Ваших бизнес&#8209;задач. Создаём новое с 2020 года.</p>
           <a class="hero__button button" href="#contacts">Связаться</a>
         </div>
