Revert "Test commit"
This reverts commit 568be9e2c9d9533998e87f4a6578341bc4ffaaae.

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   <script src="js/main.js"></script>
 
   <!--todo------------------------ Google Analytics -------------------------->
-  <!-- Change UA-XXXXX-Y to be your site's ID. -->
+  <!--! Change UA-XXXXX-Y to be your site's ID. -->
   <!-- <script>
     window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
     ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
