Added h1 and optimized logo loading

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <!-------------------------- Content -------------------------->
   <header class="header">
     <div class="header__content">
-      <a class="header__logo-link" href="#hero"><img class="header__logo" src="./img/header__logo.svg" alt="logo"></a>
+      <a class="header__logo-link" href="#hero"><img class="header__logo" src="./img/logo.svg" alt="logo"></a>
       <ul class="header__list">
         <li class="header__list-item">
           <a class="header__link" href="#hero">Главная</a>
@@ -58,7 +58,10 @@
       <div class="hero__image"></div>
       <div class="hero__content">
         <div class="hero__content-wrapper">
-          <img class="hero__logo" src="./img/hero__logo.svg" alt="Our logo" class="hero__logo">
+          <div class="hero__logo">
+            <img class="hero__logo-image" src="./img/logo.svg" alt="Our logo" class="hero__logo">
+            <h1 class="hero__logo-header">Origin Dev</h1>
+          </div>
           <p class="hero__paragraph">Команда разработки IT&#8209;продуктов и решения Ваших бизнес&#8209;задач. Создаём новое с 2020 года.</p>
           <a class="hero__button button" href="#contacts">Связаться</a>
         </div>
@@ -68,7 +71,10 @@
       <div class="hero__image"></div>
       <div class="hero__content">
         <div class="hero__content-wrapper">
-          <img class="hero__logo" src="./img/hero__logo.svg" alt="Our logo" class="hero__logo">
+          <div class="hero__logo">
+            <img class="hero__logo-image" src="./img/logo.svg" alt="Our logo" class="hero__logo">
+            <h1 class="hero__logo-header">Origin Dev</h1>
+          </div>
           <p class="hero__paragraph">Команда разработки IT&#8209;продуктов и решения Ваших бизнес&#8209;задач. Создаём новое с 2020 года.</p>
           <a class="hero__button button" href="#contacts">Связаться</a>
         </div>
@@ -78,7 +84,10 @@
       <div class="hero__image"></div>
       <div class="hero__content">
         <div class="hero__content-wrapper">
-          <img class="hero__logo" src="./img/hero__logo.svg" alt="Our logo" class="hero__logo">
+          <div class="hero__logo">
+            <img class="hero__logo-image" src="./img/logo.svg" alt="Our logo" class="hero__logo">
+            <h1 class="hero__logo-header">Origin Dev</h1>
+          </div>
           <p class="hero__paragraph">Команда разработки IT&#8209;продуктов и решения Ваших бизнес&#8209;задач. Создаём новое с 2020 года.</p>
           <a class="hero__button button" href="#contacts">Связаться</a>
         </div>
@@ -88,7 +97,10 @@
       <div class="hero__image"></div>
       <div class="hero__content">
         <div class="hero__content-wrapper">
-          <img class="hero__logo" src="./img/hero__logo.svg" alt="Our logo" class="hero__logo">
+          <div class="hero__logo">
+            <img class="hero__logo-image" src="./img/logo.svg" alt="Our logo" class="hero__logo">
+            <h1 class="hero__logo-header">Origin Dev</h1>
+          </div>
           <p class="hero__paragraph">Команда разработки IT&#8209;продуктов и решения Ваших бизнес&#8209;задач. Создаём новое с 2020 года.</p>
           <a class="hero__button button" href="#contacts">Связаться</a>
         </div>
