--- a/index.html
+++ b/index.html
@@ -79,7 +79,10 @@
             <h1 class="hero__logo-header">Origin Dev</h1>
           </div>
           <p class="hero__paragraph">Команда разработки IT&#8209;продуктов и решения Ваших бизнес&#8209;задач. Создаём новое с 2020 года.</p>
-          <a class="hero__button button" href="#contacts">Связаться</a>
+          <a class="hero__button button" href="#contacts">
+            <span class="button__shadow"></span>
+            <span class="button__body">Связаться</span>
+          </a>
         </div>
       </div>
     </div>
@@ -92,7 +95,10 @@
             <h1 class="hero__logo-header">Origin Dev</h1>
           </div>
           <p class="hero__paragraph">Команда разработки IT&#8209;продуктов и решения Ваших бизнес&#8209;задач. Создаём новое с 2020 года.</p>
-          <a class="hero__button button" href="#contacts">Связаться</a>
+          <a class="hero__button button" href="#contacts">
+            <span class="button__shadow"></span>
+            <span class="button__body">Связаться</span>
+          </a>
         </div>
       </div>
     </div>
@@ -105,7 +111,10 @@
             <h1 class="hero__logo-header">Origin Dev</h1>
           </div>
           <p class="hero__paragraph">Команда разработки IT&#8209;продуктов и решения Ваших бизнес&#8209;задач. Создаём новое с 2020 года.</p>
-          <a class="hero__button button" href="#contacts">Связаться</a>
+          <a class="hero__button button" href="#contacts">
+            <span class="button__shadow"></span>
+            <span class="button__body">Связаться</span>
+          </a>
         </div>
       </div>
     </div>
