--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 
   <main>
-    <div class="hero" id="hero">
+    <section class="hero" id="hero">
       <div class="hero__image"></div>
       <div class="hero__content">
         <div class="hero__content-wrapper">
@@ -69,23 +69,10 @@
           </a>
         </div>
       </div>
-    </div>
-    <div class="hero" id="projects">
-      <div class="hero__image"></div>
-      <div class="hero__content">
-        <div class="hero__content-wrapper">
-          <div class="hero__logo">
-            <img class="hero__logo-image" src="./img/logo.svg" alt="Our logo" class="hero__logo">
-            <h1 class="hero__logo-header">Origin Dev</h1>
-          </div>
-          <p class="hero__paragraph">Команда разработки IT&#8209;продуктов и решения Ваших бизнес&#8209;задач. Создаём новое с 2020 года.</p>
-          <a class="hero__button button" href="#contacts">
-            <span class="button__shadow"></span>
-            <span class="button__body">Связаться</span>
-          </a>
-        </div>
-      </div>
-    </div>
+    </section>
+    <section class="projects header-fix" id="projects">
+      <h2 class="projects__header">Что мы делаем?</h2>
+    </section>
     <div class="hero" id="achivments">
       <div class="hero__image"></div>
       <div class="hero__content">
