--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
         </div>
       </div>
     </section>
-    <section class="projects header-fix" id="projects">
-      <h2 class="projects__header">Что мы делаем?</h2>
+    <section class="what-we-do max-width-1120">
+      <h2 class="what-we-do__header">Что мы делаем?</h2>
     </section>
-    <div class="hero" id="achivments">
+    <section class="hero" id="projects">
       <div class="hero__image"></div>
       <div class="hero__content">
         <div class="hero__content-wrapper">
@@ -88,8 +88,8 @@
           </a>
         </div>
       </div>
-    </div>
-    <div class="hero" id="contacts">
+    </section>
+    <section class="hero" id="achivments">
       <div class="hero__image"></div>
       <div class="hero__content">
         <div class="hero__content-wrapper">
@@ -104,7 +104,23 @@
           </a>
         </div>
       </div>
-    </div>
+    </section>
+    <section class="hero" id="contacts">
+      <div class="hero__image"></div>
+      <div class="hero__content">
+        <div class="hero__content-wrapper">
+          <div class="hero__logo">
+            <img class="hero__logo-image" src="./img/logo.svg" alt="Our logo" class="hero__logo">
+            <h1 class="hero__logo-header">Origin Dev</h1>
+          </div>
+          <p class="hero__paragraph">Команда разработки IT&#8209;продуктов и решения Ваших бизнес&#8209;задач. Создаём новое с 2020 года.</p>
+          <a class="hero__button button" href="#contacts">
+            <span class="button__shadow"></span>
+            <span class="button__body">Связаться</span>
+          </a>
+        </div>
+      </div>
+    </section>
 
   </main>
 
