Added what-we-do section

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
   <main>
     <section class="hero" id="hero">
-      <div class="hero__image"></div>
+      <img class="hero__image" src="./img/hero.jpg" alt="">
       <div class="hero__content">
         <div class="hero__content-wrapper">
           <div class="hero__logo">
@@ -71,55 +71,45 @@
       </div>
     </section>
     <section class="what-we-do max-width-1120">
-      <h2 class="what-we-do__header">Что мы делаем?</h2>
-    </section>
-    <section class="hero" id="projects">
-      <div class="hero__image"></div>
-      <div class="hero__content">
-        <div class="hero__content-wrapper">
-          <div class="hero__logo">
-            <img class="hero__logo-image" src="./img/logo.svg" alt="Our logo" class="hero__logo">
-            <h1 class="hero__logo-header">Origin Dev</h1>
+      <div class="what-we-do__text">
+        <h2 class="what-we-do__header">Что мы делаем?</h2>
+        <dl class="what-we-do__desc-list">
+          <div class="what-we-do__desc-item">
+            <dt class="what-we-do__desc-term">Мобильные приложения</dt>
+            <dl class="what-we-do__desc-def">Разработка мобильных приложений с хорошим UX/UI. Предлагаем как кроссплатформенные, так и платформазависимые решения</dl>
           </div>
-          <p class="hero__paragraph">Команда разработки IT&#8209;продуктов и решения Ваших бизнес&#8209;задач. Создаём новое с 2020 года.</p>
-          <a class="hero__button button" href="#contacts">
-            <span class="button__shadow"></span>
-            <span class="button__body">Связаться</span>
-          </a>
-        </div>
-      </div>
-    </section>
-    <section class="hero" id="achivments">
-      <div class="hero__image"></div>
-      <div class="hero__content">
-        <div class="hero__content-wrapper">
-          <div class="hero__logo">
-            <img class="hero__logo-image" src="./img/logo.svg" alt="Our logo" class="hero__logo">
-            <h1 class="hero__logo-header">Origin Dev</h1>
+          <div class="what-we-do__desc-item">
+            <dt class="what-we-do__desc-term">Веб-приложения</dt>
+            <dl class="what-we-do__desc-def">Создание многофункциональных веб-сервисов под ключ. Простая интеграция в ваш бизнес с использованием современных технологий</dl>
           </div>
-          <p class="hero__paragraph">Команда разработки IT&#8209;продуктов и решения Ваших бизнес&#8209;задач. Создаём новое с 2020 года.</p>
-          <a class="hero__button button" href="#contacts">
-            <span class="button__shadow"></span>
-            <span class="button__body">Связаться</span>
-          </a>
-        </div>
-      </div>
-    </section>
-    <section class="hero" id="contacts">
-      <div class="hero__image"></div>
-      <div class="hero__content">
-        <div class="hero__content-wrapper">
-          <div class="hero__logo">
-            <img class="hero__logo-image" src="./img/logo.svg" alt="Our logo" class="hero__logo">
-            <h1 class="hero__logo-header">Origin Dev</h1>
+          <div class="what-we-do__desc-item">
+            <dt class="what-we-do__desc-term">Блокчейн-проекты</dt>
+            <dl class="what-we-do__desc-def">Смарт-контракты, кошельки и любые разработки связанные с цифровыми активами</dl>
           </div>
-          <p class="hero__paragraph">Команда разработки IT&#8209;продуктов и решения Ваших бизнес&#8209;задач. Создаём новое с 2020 года.</p>
-          <a class="hero__button button" href="#contacts">
-            <span class="button__shadow"></span>
-            <span class="button__body">Связаться</span>
-          </a>
-        </div>
+          <div class="what-we-do__desc-item">
+            <dt class="what-we-do__desc-term">Машинное обучение</dt>
+            <dl class="what-we-do__desc-def">Машинное обучение и нейронные сети, а также их интеграции в ваш бизнес</dl>
+          </div>
+          <div class="what-we-do__desc-item">
+            <dt class="what-we-do__desc-term">Дизайн</dt>
+            <dl class="what-we-do__desc-def">Создание типографики. Применение правил композиции, создание паттернов. Разработка прототипов, UI-Kit</dl>
+          </div>
+          <div class="what-we-do__desc-item">
+            <dt class="what-we-do__desc-term">Разработка UX</dt>
+            <dl class="what-we-do__desc-def">Проводим глубинные интервью, юзабилити-тестирования, опросы, и дневниковые исследования. Составление CJM и Service Blueprint</dl>
+          </div>
+        </dl>
       </div>
+      <img class="what-we-do__image" src="./img/what-we-do.jpg" alt="">
+    </section>
+    <section class="projects" id="projects">
+      
+    </section>
+    <section class="achivments" id="achivments">
+
+    </section>
+    <section class="contacts" id="contacts">
+
     </section>
 
   </main>
