--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
   <!-------------------------- Content -------------------------->
   <header class="header">
-    <div class="header__content">
+    <nav class="header__content">
       <a class="header__logo-link" href="#hero"><img class="header__logo" src="./img/logo.svg" alt="logo"></a>
       <ul class="header__list">
         <li class="header__list-item">
@@ -49,7 +49,7 @@
           <a class="header__link" href="#contacts">Контакты</a>
         </li>
       </ul>
-    </div>
+    </nav>
   </header>
 
 
