Added scroll-to-top button

--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
     </nav>
   </header>
 
-
   <main>
     <section class="hero" id="hero">
       <img class="hero__image" src="./img/hero.jpg" alt="">
@@ -111,9 +110,9 @@
     <section class="contacts" id="contacts">
 
     </section>
-
   </main>
 
+  <a class="scroll-to-top" href="#hero"></a>
   <!-------------------------- Scripts -------------------------->
   <script src="js/main.js"></script>
 
